crates/tui/tests/snapshots/snapshot_error_details_tests__snapshot_error_details_basic.snap
---
source: crates/tui/tests/snapshot_error_details_tests.rs
assertion_line: 25
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search | [?] Unknown                                                                                     │
│ |                                                                                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Press Enter to execute search                                                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Results───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                   No results. Enter a search query and press Enter.                                  │
│                   ┌Error Details─────────────────────────────────────────────────────────────────┐                   │
│                   │Summary: Connection refused                                                   │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   └──────────────────────────────────────────────────────────────────────────────┘                   │
│                       └──────────────────────────────────────────────────────────────────────┘                       │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Esc:Close | Enter:Run Ctrl+e:Export PgDn:PgDn PgUp:PgUp| ?:Help | q:Quit                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
