crates/tui/tests/snapshots/snapshot_error_details_tests__snapshot_error_details_scrollable.snap
---
source: crates/tui/tests/snapshot_error_details_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search | [?] Unknown                                                                                     │
│ |                                                                                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Press Enter to execute search                                                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Results───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                   No results. Enter a search query and press Enter.                                  │
│                                                                                                                      │
│                       ┌Error Details─────────────────────────────────────────────────────────┐                       │
│                       │                      Press Esc, q, or e to close                     │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│           ┌Error Details─────────────────────────────────────────────────────────────────┐   │                       │
│           │Summary: This is a very long error message that should cause the error details│   │                       │
│           │popup to scroll. It contains multiple lines of text to demonstrate the scroll │   │                       │
│           │functionality. When the error message is long enough, the popup should display│   │                       │
│           │a scrollbar.                                                                  │   │                       │
│           │                                                                              │   │                       │
│           │Status Code: 500                                                              │   │                       │
│           │                                                                              │   │                       │
│           │URL: https://localhost:8089/api/endpoint                                      │   │                       │
│           │                                                                              │   │                       │
│           │Request ID: req-long                                                          │   │                       │
│           │                                                                              │   │                       │
│           │Raw Response:                                                                 │   │                       │
│           │{                                                                             │   │                       │
│           │  "error": "details",                                                         │   │                       │
│           │  "nested": {                                                                 │   │                       │
│           │    "deeply": {                                                               │   │                       │
│           │      "nested": "value"                                                       │   │                       │
│           │    }                                                                         │───┘                       │
│           │  }                                                                           │                           │
│           │}                                                                             │                           │
│           │                                                                              │─────────────────────────┐ │
│           │                                                                              │Onboarding [0/5] 0%      │ │
│           │                                                                              │○ Create Profile         │ │
│           └──────────────────────────────────────────────────────────────────────────────┘○ Test Connection        │ │
│                                                                                         │ ○ Run Search             │ │
│                                                                                         └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Esc:Close| Enter:Run Ctrl+e:Export PgDn:PgDn PgUp:PgUp| ?:Help | q:Quit                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
