crates/tui/tests/snapshots/snapshot_error_details_tests__snapshot_error_details_with_context.snap
---
source: crates/tui/tests/snapshot_error_details_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search [NAV] | [?] Unknown                                                                               │
│ |                                                                                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Press Enter to execute search                                                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Results───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                   No results. Enter a search query and press Enter.                                  │
│                                                                                                                      │
│                       ┌Error Details─────────────────────────────────────────────────────────┐                       │
│                       │                      Press Esc, q, or e to close                     │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│           ┌Error Details─────────────────────────────────────────────────────────────────┐   │                       │
│           │Summary: Authentication failed                                                │   │                       │
│           │                                                                              │   │                       │
│           │Status Code: 401                                                              │   │                       │
│           │                                                                              │   │                       │
│           │URL: https://localhost:8089/services/search/jobs                              │   │                       │
│           │                                                                              │   │                       │
│           │Request ID: req-abc123                                                        │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │───┘                       │
│           │                                                                              │                           │
│           │                                                                              │                           │
│           │                                                                              │─────────────────────────┐ │
│           │                                                                              │Onboarding [0/5] 0%      │ │
│           │                                                                              │○ Create Profile         │ │
│           └──────────────────────────────────────────────────────────────────────────────┘○ Test Connection        │ │
│                                                                                         │ ○ Run Search             │ │
│                                                                                         └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│[NAV] Esc:Close| Enter:Run Ctrl+e:Export PgDn:PgDn PgUp:PgUp| ?:Help | q:Quit                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
