crates/tui/tests/snapshots/snapshot_error_details_tests__snapshot_error_details_with_raw_json.snap
---
source: crates/tui/tests/snapshot_error_details_tests.rs
assertion_line: 86
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search | [?] Unknown                                                                                     │
│ |                                                                                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Press Enter to execute search                                                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Results───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                   No results. Enter a search query and press Enter.                                  │
│                   ┌Error Details─────────────────────────────────────────────────────────────────┐                   │
│                   │Summary: API error                                                            │                   │
│                   │                                                                              │                   │
│                   │Status Code: 500                                                              │                   │
│                   │                                                                              │                   │
│                   │Raw Response:                                                                 │                   │
│                   │{                                                                             │                   │
│                   │  "messages": [                                                               │                   │
│                   │    {                                                                         │                   │
│                   │      "text": "Internal server error",                                        │                   │
│                   │      "type": "ERROR"                                                         │                   │
│                   │    }                                                                         │                   │
│                   │  ]                                                                           │                   │
│                   │}                                                                             │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   └──────────────────────────────────────────────────────────────────────────────┘                   │
│                       └──────────────────────────────────────────────────────────────────────┘                       │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Esc:Close | Enter:Run Ctrl+e:Export PgDn:PgDn PgUp:PgUp| ?:Help | q:Quit                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
