crates/tui/tests/snapshots/snapshot_error_details_tests__snapshot_error_details_with_splunk_messages.snap
---
source: crates/tui/tests/snapshot_error_details_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search [NAV] | [?] Unknown                                                                               │
│ |                                                                                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Press Enter to execute search                                                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Results───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                   No results. Enter a search query and press Enter.                                  │
│                                                                                                                      │
│                       ┌Error Details─────────────────────────────────────────────────────────┐                       │
│                       │                      Press Esc, q, or e to close                     │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│           ┌Error Details─────────────────────────────────────────────────────────────────┐   │                       │
│           │Summary: Search failed                                                        │   │                       │
│           │                                                                              │   │                       │
│           │Status Code: 400                                                              │   │                       │
│           │                                                                              │   │                       │
│           │Splunk Messages:                                                              │   │                       │
│           │  [ERROR] Invalid SPL syntax near '|'                                         │   │                       │
│           │  [WARN] Search may be slow due to missing index                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │   │                       │
│           │                                                                              │───┘                       │
│           │                                                                              │                           │
│           │                                                                              │                           │
│           │                                                                              │─────────────────────────┐ │
│           │                                                                              │Onboarding [0/5] 0%      │ │
│           │                                                                              │○ Create Profile         │ │
│           └──────────────────────────────────────────────────────────────────────────────┘○ Test Connection        │ │
│                                                                                         │ ○ Run Search             │ │
│                                                                                         └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│[NAV]  Shift+Tab:Prev  | Esc:Close| Enter:Run Ctrl+e:Export PgDn:PgDn PgUp:PgUp| ?:Help | q:Quit                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
